Avoid NPE (#65)